--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football News | Jan 2025 - Now</title>
+    <title>Real Madrid Europe Football News | Jan 2025 - Now</title>
     <style>
         * {
             margin: 0;
